[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Chatbox/ChatBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Leaderboard/Leaderboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Broadcast/Broadcast.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/DeathScreen/DeathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/ScreenHUD.gd" type="Script" id=5]

[node name="ScreenHUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ChatBox" parent="." instance=ExtResource( 1 )]

[node name="Leaderboard" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -261.824
margin_top = 98.1841
margin_right = -261.824
margin_bottom = 98.1841

[node name="Broadcast" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 0.128
anchor_right = 0.5
anchor_bottom = 1.0

[node name="DeathScreen" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="edit_ended" from="ChatBox" to="." method="_on_ChatBox_edit_ended"]
[connection signal="edit_started" from="ChatBox" to="." method="_on_ChatBox_edit_started"]
[connection signal="text_sent" from="ChatBox" to="." method="_on_ChatBox_text_sent"]
